# tour/blog-service/internal/routers/api/v1/tags.go
@@ -1,7 +1,11 @@
 package v1
 
 import (
-	"net/http"
+	"blog-service/global"
+	"blog-service/internal/service"
+	"blog-service/pkg/app"
+	"blog-service/pkg/convert"
+	"blog-service/pkg/errcode"
 
 	"github.com/gin-gonic/gin"
 )
@@ -31,8 +35,37 @@ func NewTag() Tag {
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/tags [get]
-func (t Tag) Get(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{"message": "获取标签"})
+func (t Tag) List(c *gin.Context) {
+	// 定义请求参数结构体
+	param := service.TagListRequest{}
+	// 创建响应实例
+	response := app.NewResponse(c)
+	// 参数绑定和校验
+	valid, errs := app.BindAndValid(c, &param)
+	if !valid {
+		global.Logger.Errorf("app.BindAndValid errs: %v", errs)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errs.Errors()...))
+		return
+	}
+	// 创建服务实例
+	svc := service.New(c.Request.Context())
+	// 设置分页参数
+	pager := app.Pager{Page: app.GetPage(c), PageSize: app.GetPageSize(c)}
+	// 统计标签总数
+	totalRows, err := svc.CountTag(&service.CountTagRequest{Name: param.Name, State: param.State})
+	if err != nil {
+		global.Logger.Errorf("svc.CountTag err:%v", err)
+		response.ToErrorResponse(errcode.ErrorCountTagFail)
+		return
+	}
+	// 获取标签列表
+	tags, err := svc.GetTagList(&param, &pager)
+	if err != nil {
+		global.Logger.Errorf("svc.GetTagList err:%v", err)
+		response.ToErrorResponse(errcode.ErrorGetTagListFail)
+		return
+	}
+	response.ToResponseList(tags, int(totalRows))
 }
 
 //
@@ -57,29 +90,62 @@ func (t Tag) Get(c *gin.Context) {
 
 // @Summary 新增标签
 // @Produce  json
-// @Param name body string true "标签名称" minlength(3) maxlength(100)
-// @Param state body int false "状态" Enums(0, 1) default(1)
-// @Param created_by body string true "创建者" minlength(3) maxlength(100)
+// @Param data body service.CreateTagRequest true "创建标签"
 // @Success 200 {object} model.TagSwagger "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/tags [post]
 func (t Tag) Create(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{"message": "创建标签"})
+	param := service.CreateTagRequest{}
+	response := app.NewResponse(c)
+	valid, errs := app.BindAndValid(c, &param)
+	if !valid {
+		global.Logger.Errorf("app.BindAndValid errs: %v", errs)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errs.Errors()...))
+		return
+	}
+
+	svc := service.New(c.Request.Context())
+	err := svc.CreateTag(&param)
+	if err != nil {
+		global.Logger.Errorf("svc.CreateTag err:%v", err)
+		response.ToErrorResponse(errcode.ErrorCreateTagFail)
+		return
+	}
+
+	response.ToResponse(gin.H{})
+	return
+	// c.JSON(http.StatusOK, gin.H{"message": "创建标签"})
 }
 
 // @Summary 更新标签
 // @Produce  json
 // @Param id path int true "标签 ID"
-// @Param name body string false "标签名称" minlength(3) maxlength(100)
-// @Param state body int false "状态" Enums(0, 1) default(1)
-// @Param modified_by body string true "修改者" minlength(3) maxlength(100)
+// @Param data body service.UpdateTagRequest true "更新标签"
 // @Success 200 {array} model.TagSwagger "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/tags/{id} [put]
 func (t Tag) Update(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{"message": "更新标签"})
+	param := service.UpdateTagRequest{ID: convert.StrTo(c.Param("id")).MustUint32()}
+	response := app.NewResponse(c)
+	valid, errs := app.BindAndValid(c, &param)
+	if !valid {
+		global.Logger.Errorf("app.BindAndValid errs: %v", errs)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errs.Errors()...))
+		return
+	}
+	svc := service.New(c.Request.Context())
+	err := svc.UpdateTag(&param)
+	if err != nil {
+		global.Logger.Errorf("svc.UpdateTag err:%v", err)
+		response.ToErrorResponse(errcode.ErrorUpdateTagFail)
+		return
+	}
+	response.ToResponse(gin.H{})
+	return
+
+	// c.JSON(http.StatusOK, gin.H{"message": "更新标签"})
 }
 
 // @Summary 删除标签
@@ -90,5 +156,23 @@ func (t Tag) Update(c *gin.Context) {
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/tags/{id} [delete]
 func (t Tag) Delete(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{"message": "删除标签"})
+	param := service.DeleteTagRequest{ID: convert.StrTo(c.Param("id")).MustUint32()}
+	response := app.NewResponse(c)
+	valid, errs := app.BindAndValid(c, &param)
+	if !valid {
+		global.Logger.Errorf("app.BindAndValid errs: %v", errs)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errs.Errors()...))
+		return
+	}
+	svc := service.New(c.Request.Context())
+	err := svc.DeleteTag(&param)
+	if err != nil {
+		global.Logger.Errorf("svc.DeleteTag err:%v", err)
+		response.ToErrorResponse(errcode.ErrorDeleteTagFail)
+		return
+	}
+	response.ToResponse(gin.H{})
+	return
+
+	// c.JSON(http.StatusOK, gin.H{"message": "删除标签"})
 }
